<resources>
    <string name="app_name">MatBrackets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign up</string>
    <string name="target_URL">https://dev.matbrackets.com</string>
    <string name="dev_URL">https://dev.matbrackets.com</string>
    <string name="prod_URL">https://matbrackets.com</string>

    <!-- Strings related to login/register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_password_match">These passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_occurred">An error occurred</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_account_fragment">Hello account fragment</string>
    <string name="hello_my_tournaments_fragment">These are my tournaments</string>
    <string name="search_hint">Look for tournaments...</string>

    <string name="no_viewable_tournaments">You don\'t have any tournaments yet?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_view_tournament">ViewTournamentActivity</string>
</resources>
